# c-_gpu__capacity_analyzer

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  metadata.json  package-lock.json  server.ts
cpp/: CMakeLists.txt  GpuDecoder.cpp  GpuDecoder.hpp  Pipeline.cpp  Pipeline.hpp  README.md  TrtInference.cpp  TrtInference.hpp  main.cpp
include/vision/: Decoder.hpp  Inference.hpp  Pipeline.hpp
src/: App.tsx  index.css  main_core.cpp
src/components/: Dashboard.tsx  GpuMonitor.tsx  StreamMatrix.tsx  SystemConsole.tsx
src/core/: Decoder.cpp  Inference.cpp  Pipeline.cpp
